--- a/css/pog.css
+++ b/css/pog.css
@@ -486,6 +486,13 @@ body.dark-mode .reveal img {
     flex: 1;
 }
 
+.touch-icon {
+    font-size: 1.5em;
+    min-width: 40px;
+    text-align: center;
+    flex-shrink: 0;
+}
+
 body.dark-mode .theme-toggle,
 body.dark-mode .help-toggle {
     color: #f0f0f0;
