--- a/css/pog.css
+++ b/css/pog.css
@@ -225,6 +225,8 @@
     width: auto !important;
     height: auto !important;
     margin: 8px auto !important;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 
 .reveal video.img-50 {
